com/header.less
header {
  position: fixed;
  z-index: 3;
  width: 100%;
  height: 47px;
  background: #fff;

  nav {
    display: flex;
    margin: auto;
    max-width: 900px;
    height: 100%;
  }

  .nav-item {
    display: inline-flex;
    align-items: center;
    height: 100%;
    padding: 0 20px;
    border-bottom: 2.5px solid transparent;
    color: var(--muted-text);

    .label {
      font-weight: 500;
      font-size: 13px;
      letter-spacing: .2px;
    }

    .icon {
      height: 18px;
      margin-right: 7px;

      * {
        fill: var(--muted-text);
      }

      &.settings {
        height: 20px;

        svg {
          width: 20px;
          height: 20px;
        }
      }

      svg {
        width: 18px;
        height: 18px;
      }
    }

    &.profile,
    &.new-post {
      border-bottom: 0;
      padding-right: 0;
    }

    &.profile {
      margin-left: auto;

      .name {
        margin-right: 7px;
      }
    }

    &:hover,
    &.active {
      color: var(--theme-color);
      border-color: var(--theme-color);
      text-decoration: none;

      .icon * {
        fill: var(--theme-color);
      }
    }
  }
}

